--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div id="container">
+	<div id="red"></div>
+	<div id="green"></div>
+	<div id="yellow"></div>
+</div>
 </body>
 
 </html>
